[tool.poetry]
name = "ahc016"
version = "0.1.0"
description = ""
authors = ["terry-u16 <terry-u16@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.6.2"
pandas = "^1.5.1"
seaborn = "^0.12.1"
numpy = "^1.23.4"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
